# pulsar-client-cpp

./: .asf.yaml  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LEGACY_BUILD.md  LICENSE  LegacyFindPackages.cmake  README.md  arm64-osx.cmake  dependencies.yaml  docker-build-centos7.sh  docker-build.sh  docker-format.sh  docker-tests.sh  mac-intel-build.sh  mac-intel-install.sh  pulsar-test-service-start.sh  pulsar-test-service-stop.sh  run-loadbalancer-integ-tests.sh  run-unit-tests.sh  vcpkg-configuration.json  vcpkg-osx-json.diff  vcpkg.json  version.txt  x64-osx.cmake
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci-build-binary-artifacts.yaml  ci-pr-validation.yaml  codeql-analysis.yml
build-support/: Dockerfile.format  apply-vcpkg-macos-curl-patch.sh  copy-deps-versionfile.sh  dep-version.py  docker-format.sh  download-release-artifacts.py  gen-pulsar-version-macro.py  generate-source-archive.sh  merge_archives.sh  merge_archives_vcpkg.sh  run_clang_format.py  run_clang_tidy.sh  setup-test-service-container.sh  stage-release.sh  start-mim-test-service-inside-container.sh  start-test-service-inside-container.sh
cmake_modules/: FindClangTools.cmake
examples/: CMakeLists.txt  SampleAsyncConsumerCApi.c  SampleAsyncProducer.cc  SampleConsumer.cc  SampleConsumerCApi.c  SampleConsumerListener.cc  SampleConsumerListenerCApi.c  SampleCustomLoggerCApi.c  SampleKeyValueSchemaConsumer.cc  SampleKeyValueSchemaProducer.cc  SampleProducer.cc  SampleProducerCApi.c  SampleReaderCApi.c
examples/st/: README.md  SampleStCheckpointConsumer.cc  SampleStJsonSchema.cc  SampleStProducer.cc  SampleStQueueConsumer.cc  SampleStStreamConsumer.cc
include/pulsar/: Authentication.h  AutoClusterFailover.h  BatchReceivePolicy.h  BrokerConsumerStats.h  Client.h  ClientConfiguration.h  CompressionType.h  ConsoleLoggerFactory.h  Consumer.h  ConsumerConfiguration.h  ConsumerIntercepptor.h  ConsumerInterceptor.h  ConsumerType.h  CryptoKeyReader.h  DeadLetterPolicy.h  DeadLetterPolicyBuilder.h  DeprecatedException.h  EncryptionContext.h  EncryptionKeyInfo.h  FileLoggerFactory.h  InitialPosition.h  KeySharedPolicy.h  KeyValue.h  Logger.h  Message.h  MessageBatch.h  MessageBuilder.h  MessageId.h  MessageIdBuilder.h  MessageRoutingPolicy.h  Producer.h  ProducerConfiguration.h  Reader.h  (+17 more)
lib/: AckGroupingTracker.cc  AckGroupingTracker.h  AckGroupingTrackerDisabled.cc  AckGroupingTrackerDisabled.h  AckGroupingTrackerEnabled.cc  AckGroupingTrackerEnabled.h  AsioDefines.h  AsioTimer.h  AtomicSharedPtr.h  Authentication.cc  AutoClusterFailover.cc  Backoff.cc  Backoff.h  Base64Utils.h  BatchAcknowledgementTracker.cc  BatchAcknowledgementTracker.h  BatchMessageAcker.h  BatchMessageContainer.cc  BatchMessageContainer.h  BatchMessageContainerBase.cc  BatchMessageContainerBase.h  BatchMessageKeyBasedContainer.cc  BatchMessageKeyBasedContainer.h  BatchReceivePolicy.cc  BatchReceivePolicyImpl.h  BatchedMessageIdImpl.h  BinaryProtoLookupService.cc  BinaryProtoLookupService.h  BitSet.h  BlockingQueue.h  BoostHash.h  BrokerConsumerStats.cc  BrokerConsumerStatsImpl.cc  BrokerConsumerStatsImpl.h  BrokerConsumerStatsImplBase.h  CMakeLists.txt  ChunkMessageIdImpl.h  Client.cc  ClientConfiguration.cc  ClientConfigurationImpl.h  (+161 more)
lib/auth/: AuthAthenz.cc  AuthAthenz.h  AuthBasic.cc  AuthBasic.h  AuthOauth2.cc  AuthOauth2.h  AuthTls.cc  AuthTls.h  AuthToken.cc  AuthToken.h  InitialAuthData.h
lib/auth/athenz/: ZTSClient.cc  ZTSClient.h
lib/c/: cStringMap.cc  c_Authentication.cc  c_Client.cc  c_ClientConfiguration.cc  c_Consumer.cc  c_ConsumerConfiguration.cc  c_Message.cc  c_MessageId.cc  c_Messages.cc  c_ProducerConfiguration.cc  c_Reader.cc  c_ReaderConfiguration.cc  c_Result.cc  c_TableView.cc  c_TableViewConfiguration.cc  c_Version.cc  c_structs.h
lib/checksum/: ChecksumProvider.h  crc32c_arm.cc  crc32c_sse42.cc  crc32c_sw.cc
lib/include/pulsar/: Transaction.h
lib/lz4/: lz4.cc  lz4.h
lib/st/: Checkpoint.cc  ClientCore.cc  ClientImpl.cc  ClientImpl.h  DagWatchSession.cc  DagWatchSession.h  MessageCore.cc  MessageIdImpl.h  MessageImpl.h  ProducerCore.cc  ProducerImplBase.h  PulsarClientBuilder.cc  QueueConsumerCore.cc  QueueConsumerImpl.cc  QueueConsumerImpl.h  ReceiveQueue.cc  ReceiveQueue.h  SegmentLayout.cc  SegmentLayout.h  StClientImpl.cc  StClientImpl.h  StMessageId.cc  StProducerImpl.cc  StProducerImpl.h  Transaction.cc
lib/stats/: ConsumerStatsBase.h  ConsumerStatsDisabled.h  ConsumerStatsImpl.cc  ConsumerStatsImpl.h  ProducerStatsBase.h  ProducerStatsDisabled.h  ProducerStatsImpl.cc  ProducerStatsImpl.h
perf/: BuildPerf.cmake  CMakeLists.txt  PerfConsumer.cc  PerfProducer.cc  RateLimiter.h
proto/: PulsarApi.proto
templates/: Version.h.in
test-conf/: broker-cert.pem  broker.conf  cacert.pem  cakey.pem  chained-client-cert.pem  chained-client-key.pem  client-cert.pem  client-ssl-mim.conf  client-ssl.conf  cpp_credentials_file.json  intermediate-cacert.pem  intermediate-cakey.pem  standalone-ssl-mim.conf  standalone-ssl.conf
tests/: AcknowledgeTest.cc  AuthBasicTest.cc  AuthPluginTest.cc  AuthTokenTest.cc  AutoClusterFailoverTest.cc  BackoffTest.cc  Base64Test.cc  BasicEndToEndTest.cc  BatchMessageTest.cc  BitSetTest.cc  BlockingQueueTest.cc  BuildTests.cmake  CMakeLists.txt  ClientDeduplicationTest.cc  ClientTest.cc  CompressionCodecSnappyTest.cc  ConnectionTest.cc  ConsumerConfigurationTest.cc  ConsumerSeekTest.cc  ConsumerStatsTest.cc  ConsumerTest.cc  ConsumerTest.h  ConsumerWrapper.cc  ConsumerWrapper.h  CustomLoggerTest.cc  CustomRoutingPolicy.h  DeadLetterPolicyTest.cc  DeadLetterQueueTest.cc  EncryptionTest.cc  EncryptionTests.cc  HashTest.cc  HttpHelper.cc  HttpHelper.h  Int64SerDesTest.cc  InterceptorsTest.cc  KeyBasedBatchingTest.cc  KeySharedConsumerTest.cc  KeySharedPolicyTest.cc  KeyValueImplTest.cc  KeyValueSchemaTest.cc  (+51 more)
vcpkg-example/: CMakeLists.txt  README.md  main.cc  vcpkg.json
vcpkg-triplets/: arm64-osx.cmake  x64-osx.cmake
win-examples/: CMakeLists.txt  example.cc
wireshark/: CMakeLists.txt  README.md  pulsarDissector.cc
(+102 files in other folders)
